table created on sales.html,index.html modified

--- a/style.css
+++ b/style.css
@@ -1,53 +1,38 @@
 body {
-    background-color: rgb(102, 153, 153);
-    font-family: "Amaranth", sans-serif;
-}
-body {
-    display: block;
-    margin: 8px;
+    background-color: #E6E6E6;
+    font-family: 'Nunito', 'sans-serif';
 }
 
-img {
+
+#img1 {
    padding:10px;
-   border:5px solid #FF9966;
-   background-color:#E8E8F0;
+   border:5px solid #3D1414;
+   background-color:#7A2929;
 }
+
+#img1 {
+    display: block;
+    margin: 0px auto;
+  }
 
 h1 {
     text-align: center;
-    font-family: "Amaranth", sans-serif;
+    font-family: 'Nunito', 'sans-serif';
     text-transform: uppercase;
 }
 
-<<<<<<< HEAD
-body{
-	background-color: #669999;
-	font-family: 'Amaranth', sans-serif;
-
+p {
+  text-align: center;
+  text-transform: uppercase;
 }
 
-img.align-center {
-    display: block;
-    margin: 0px auto;
-}
-
-img {
-   padding:10px;
-   border: 5px solid #021a40;
-}	
-
-h1{
-	text-align: center;
-	font-family: 'Amaranth', sans-serif;
-	text-transform: uppercase;
-}	
 
 p{
 	color: #993333;
 }
 
 ul{
-	font-family: 'Cagliostro', sans-serif;
+	font-family: 'Cagliostro', 'sans-serif';
 	color:#333333 ;
 }
 =======
@@ -57,5 +42,4 @@ h4 {
 	color: #993333;
 }
 
-	
->>>>>>> 7a2c74e0c6cd4e08f491b079ef3413796abd0170
+
