--- a/style.css
+++ b/style.css
@@ -1,39 +1,102 @@
-body {
-    background-color: #E6E6E6;
-    font-family: 'Nunito', 'sans-serif';
+img.align-center{
+  display:block;
+  margin: 0px auto;
+  width: 300px;
+}
+
+.title
+{
+	font-family: 'Ubuntu', 'sans-serif';
+  text-align: center
+}
+
+h1{
+color:#545464
 }
 
 
-#img1 {
-   padding:10px;
-   border:5px solid #3D1414;
-   background-color:#7A2929;
+.c1
+{
+	background-color: #CC7A29;
 }
 
-#img1 {
-    display: block;
-    margin: 0px auto;
-  }
-
-h1 {
-    text-align: center;
-    font-family: 'Nunito', 'sans-serif';
-    text-transform: uppercase;
+h2
+{
+	color: #656574;
 }
 
-p {
-  text-align: center;
-  text-transform: uppercase;
-	color: #993333;
+.c2
+{
+	background-color: #522900;
 }
+
+h3{
+	color: #747482;
+}
+
+.c3
+{
+	background-color: #560000;
+}
+
+h4{
+	color: #82828E;
+}
+
+.c4
+{
+	background-color: #888;
+}
+
+a
+{
+	color: #7070B8;
+}
+
+.c5
+{
+	background-color: #003300;
+}
+
+p
+{
+	color: #90909B;
+}
+
+.c6
+{
+	background-color: #1020d0;
+}
+
+.bg{
+	background-color: #ffffcc;
+}
+
+.colorPallete > *
+{
+	width: 200px;
+	height: 200px;
+  display: inline-block;
+}
+
+.img0{
+  margin-left: 10px;
+  width: 150px;
+  margin-top: -10px;
+}
+
+.p1{
+  color:#003300;
+}
+
+.p2{
+  color.#545464;
+}
+
 
 ul{
-	font-family: 'Cagliostro', 'sans-serif';
-	color:#333333 ;
+  color:#545464 ;
 }
 
-fieldset{
-  max-width: 170px;
-}
 
 
